--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,16 @@
             "args": "",
             "envFile": "${workspaceFolder}/.env",
             "vmArgs": " -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=58617 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dspring.jmx.enabled=true -Djava.rmi.server.hostname=localhost -Dspring.application.admin.enabled=true -Dspring.boot.project.name=user-service"
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-RestaurantServiceApplication<restaurant-service>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "mainClass": "com.example.restaurant_service.RestaurantServiceApplication",
+            "projectName": "restaurant-service",
+            "args": "",
+            "envFile": "${workspaceFolder}/.env"
         }
     ]
 }
