--- a/restaurant-service/src/main/resources/application.yml
+++ b/restaurant-service/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 #server
 server:
-  port: 8081
+  port: 8082
 
 #my-sql
 spring:
   application:
-    name: user-service
+    name: restaurant-service
   datasource:
-    url: jdbc:mysql://localhost:3306/users
+    url: jdbc:mysql://localhost:3306/restaurant
     driverClassName: com.mysql.cj.jdbc.Driver
     username: root
     password: root
@@ -16,6 +16,3 @@ spring:
     database-platform: org.hibernate.dialect.MySQL8Dialect
   hibernate:
     ddl-auto: update
-jwt:
-  secret: "this-is-a-very-secret-key-at-least-32-chars"
-  expiration: 3600000
